--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "react-native-country-picker-modal": "^2.0.0"
   },
   "devDependencies": {
-    "metro-react-native-babel-preset": "^0.61.0"
+    "metro-react-native-babel-preset": "^0.61.0",
+    "patch-package": "^8.0.1"
   }
 }
